--- a/Atividade 3.ipynb
+++ b/Atividade 3.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercícios NumPy"
+    "# Exercícios NumPy\n",
+    "\n",
+    "Rhenan Dias - GU3009254"
    ]
   },
   {
