--- a/analise/join_datasets.ipynb
+++ b/analise/join_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "id": "f21d3e26-16bb-4e7a-b29c-a0668384474b",
    "metadata": {},
    "outputs": [],
@@ -13,41 +13,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "1c333906-021e-4570-9d50-d6db903c893c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configurações\n",
     "work_directory = \"../../combustiveis/\"\n",
-    "final_dataset_name = \"dataset_diesel_s10_sp.csv\""
+    "final_dataset_name = \"dataset_etanol_sp.csv\"\n",
+    "combustivel = \"ETANOL\"\n",
+    "estado = \"SP\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "dae1fe5b-7c49-430e-ba11-1e9c79a4af73",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Quantidade total de entradas semestrais: 46\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Adquire os nomes dos arquivos existentes no diretório\n",
     "# Cada nome de arquivo representa uma entrada semestral do dataset\n",
-    "filenames = next(os.walk(work_directory), (None, None, []))[2]\n",
-    "\n",
-    "print(f'Quantidade total de entradas semestrais: {len(filenames)}')"
+    "filenames = next(os.walk(work_directory), (None, None, []))[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "id": "1f1b8dc4-9c05-40f1-bf8b-061ce2ca9612",
    "metadata": {},
    "outputs": [],
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "id": "4d36ae3a-7041-4af2-98bf-61555b7d03ad",
    "metadata": {},
    "outputs": [
@@ -66,7 +58,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nenhum arquivo existente de dataset final\n",
       "Leitura finalizada da entrada 1\n",
       "Leitura finalizada da entrada 2\n",
       "Leitura finalizada da entrada 3\n",
@@ -128,7 +119,7 @@
     "    df = pd.read_csv(work_directory + filename, sep=\";\", decimal=\",\", encoding=\"cp860\")\n",
     "    \n",
     "    # Aplicar filtros desejados para o dataset\n",
-    "    df = df[(df[\"Produto\"] == \"DIESEL S10\") & (df[\"Estado - Sigla\"] == \"SP\")]\n",
+    "    df = df[(df[\"Produto\"] == combustivel) & (df[\"Estado - Sigla\"] == estado)]\n",
     "    \n",
     "    # Acrescenta coluna com o identificador do semestre\n",
     "    df.insert(0, \"Semestre\", filename[3:10], True)\n",
