--- a/Atividade ETL.ipynb
+++ b/Atividade ETL.ipynb
@@ -1,22 +1,64 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d894725f-2436-4f7a-b5f3-5db390065b0f",
+   "metadata": {},
+   "source": [
+    "# Atividade ETL\n",
+    "\n",
+    "Rhenan Dias Morais - GU3009254"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7792ca1f-f054-4b9a-b709-fffa028e15ca",
+   "metadata": {},
+   "source": [
+    "### Importando as bibliotecas necessárias"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "b10e3904-66e6-4c7d-8b68-4b6be0ad5824",
    "metadata": {},
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
-    "import petl as etl\n",
-    "\n",
+    "import petl as etl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6839952b-55c5-4fb6-a59b-c95a66d90b4d",
+   "metadata": {},
+   "source": [
+    "### Importando o dataset \"Iris\" da base de exemplos do Seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63fa03d1-3373-419a-917b-69da41c4f9f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "iris = sns.load_dataset('iris')\n",
     "dados = etl.fromdataframe(iris)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "949a6668-89d5-475c-ad67-7efa079be85b",
+   "metadata": {},
+   "source": [
+    "### Primeira visualização do dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "a6e01750-5310-4340-813f-6ddf2d83076c",
    "metadata": {},
    "outputs": [
@@ -159,7 +201,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,8 +211,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b01714e-f6b8-4f27-80ec-0e5cdf1904ae",
+   "metadata": {},
+   "source": [
+    "### Visualizando os fieldnames do dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "id": "6d08ca2c-6910-4f8a-89b2-deb02340698a",
    "metadata": {},
    "outputs": [
@@ -180,7 +230,7 @@
        "('sepal_length', 'sepal_width', 'petal_length', 'petal_width', 'species')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,8 +240,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0129f1e4-8954-4d9c-a39a-aa274cc80816",
+   "metadata": {},
+   "source": [
+    "### Exibindo uma quantidade específica de dados"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "83fc9491-79a7-4efc-b7db-11fe5f078a82",
    "metadata": {},
    "outputs": [
@@ -258,8 +316,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "acc2b871-91a7-42a4-b664-a108547ef48f",
+   "metadata": {},
+   "source": [
+    "### Contabilizando a quantidade total de linhas do dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "id": "5c1a4dec-02c5-4b17-9694-8b2085f76e93",
    "metadata": {},
    "outputs": [
@@ -269,7 +335,7 @@
        "150"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,8 +345,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1eac5447-2c12-4905-b652-3932e2727c00",
+   "metadata": {},
+   "source": [
+    "### Funções para transformação, para adicionar á area das Sépalas e das Pétalas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "id": "cbf4a897-3002-444c-98aa-49169e25512e",
    "metadata": {},
    "outputs": [],
@@ -293,8 +367,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b4afab0-4cec-4cca-9985-8a9e087f0220",
+   "metadata": {},
+   "source": [
+    "### Calculando área das Sépalas e das Pétalas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "id": "44885c87-f5c6-401e-8f12-0c80c3ee38f1",
    "metadata": {},
    "outputs": [
@@ -421,8 +503,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1cd8653b-fe2e-4277-a0a2-9f298b791f26",
+   "metadata": {},
+   "source": [
+    "### Realizando Corte das áreas geradas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "id": "39271661-df92-46d5-b423-bdf118e9969f",
    "metadata": {},
    "outputs": [
@@ -484,7 +574,7 @@
        "..."
       ]
      },
-     "execution_count": 66,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "04f08650-8ae1-4194-8405-208f572cb8f7",
    "metadata": {},
    "outputs": [
@@ -559,7 +649,7 @@
        "..."
       ]
      },
-     "execution_count": 67,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,12 +661,193 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5330fb76-83a5-4989-b0e2-34717993a5e6",
+   "metadata": {},
+   "source": [
+    "### Separando dados em treino"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6307c42d-9b82-41ac-98d5-0f18f909d0ef",
+   "execution_count": 36,
+   "id": "e4e76299-a937-47ae-92b7-49bd3eca208f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn import (ensemble, model_selection, preprocessing, tree)\n",
+    "from sklearn.metrics import (auc, confusion_matrix, roc_auc_score, roc_curve)\n",
+    "from sklearn.model_selection import(train_test_split, StratifiedKFold)\n",
+    "from yellowbrick.classifier import (ConfusionMatrix, ROCAUC)\n",
+    "from yellowbrick.model_selection import (LearningCurve)\n",
+    "\n",
+    "import janitor as jn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cfd21a0f-96c1-441c-b89c-ede5f69300db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y = jn.get_features_targets(iris, target_columns='petal_length')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "8908ff2c-26e6-4a65-afa9-e174495e3544",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_treino, X_test, Y_treino, Y_test = model_selection.train_test_split(X, y, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "19fc3452-96e0-4a41-9ea6-63608825f5b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal_length</th>\n",
+       "      <th>sepal_width</th>\n",
+       "      <th>petal_width</th>\n",
+       "      <th>species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>6.6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>7.2</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>7.1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>105 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sepal_length  sepal_width  petal_width     species\n",
+       "81            5.5          2.4          1.0  versicolor\n",
+       "133           6.3          2.8          1.5   virginica\n",
+       "137           6.4          3.1          1.8   virginica\n",
+       "75            6.6          3.0          1.4  versicolor\n",
+       "109           7.2          3.6          2.5   virginica\n",
+       "..            ...          ...          ...         ...\n",
+       "71            6.1          2.8          1.3  versicolor\n",
+       "106           4.9          2.5          1.7   virginica\n",
+       "14            5.8          4.0          0.2      setosa\n",
+       "92            5.8          2.6          1.2  versicolor\n",
+       "102           7.1          3.0          2.1   virginica\n",
+       "\n",
+       "[105 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_treino"
+   ]
   }
  ],
  "metadata": {
