--- a/Trabalho/Join - Parametros.ipynb
+++ b/Trabalho/Join - Parametros.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "f21d3e26-16bb-4e7a-b29c-a0668384474b",
    "metadata": {},
    "outputs": [],
@@ -13,21 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "1c333906-021e-4570-9d50-d6db903c893c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configurações\n",
     "work_directory = \"../../combustiveis/\"\n",
-    "final_dataset_name = \"dataset_etanol_sp.csv\"\n",
+    "final_dataset_name = \"dataset_etanol_guarulhos.csv\"\n",
     "combustivel = \"ETANOL\"\n",
-    "estado = \"SP\""
+    "municipio = \"GUARULHOS\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "dae1fe5b-7c49-430e-ba11-1e9c79a4af73",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "1f1b8dc4-9c05-40f1-bf8b-061ce2ca9612",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "4d36ae3a-7041-4af2-98bf-61555b7d03ad",
    "metadata": {},
    "outputs": [
@@ -58,6 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Nenhum arquivo existente de dataset final\n",
       "Leitura finalizada da entrada 1\n",
       "Leitura finalizada da entrada 2\n",
       "Leitura finalizada da entrada 3\n",
@@ -119,7 +120,7 @@
     "    df = pd.read_csv(work_directory + filename, sep=\";\", decimal=\",\", encoding=\"cp860\")\n",
     "    \n",
     "    # Aplicar filtros desejados para o dataset\n",
-    "    df = df[(df[\"Produto\"] == combustivel) & (df[\"Estado - Sigla\"] == estado)]\n",
+    "    df = df[(df[\"Produto\"] == combustivel) & (df[\"Municipio\"] == municipio)]\n",
     "    \n",
     "    # Acrescenta coluna com o identificador do semestre\n",
     "    df.insert(0, \"Semestre\", filename[3:10], True)\n",
