--- a/Trabalho/Trabalho - Regressão Logística - Combustível.ipynb
+++ b/Trabalho/Trabalho - Regressão Logística - Combustível.ipynb
@@ -331,10 +331,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "fb5853be-5dc5-4d23-9698-cdb2f2e57983",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      ETANOL       0.91      0.83      0.87    266827\n",
+      "    GASOLINA       0.84      0.92      0.88    266644\n",
+      "\n",
+      "    accuracy                           0.87    533471\n",
+      "   macro avg       0.88      0.87      0.87    533471\n",
+      "weighted avg       0.88      0.87      0.87    533471\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import classification_report\n",
     "from sklearn import metrics\n",
