AAAAAAAAAA eu não aguento mais

--- a/Trabalho/Join - Combustiveis Gerais em SP.ipynb
+++ b/Trabalho/Join - Combustiveis Gerais em SP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "f21d3e26-16bb-4e7a-b29c-a0668384474b",
    "metadata": {},
    "outputs": [],
@@ -13,20 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "1c333906-021e-4570-9d50-d6db903c893c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configurações\n",
     "work_directory = \"../../combustiveis/\"\n",
-    "final_dataset_name = \"dataset_etanol_gasolina_sp.csv\"\n",
-    "estado = \"SP\""
+    "final_dataset_name = \"dataset_etanol_gasolina_gnv_guarulhos.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "dae1fe5b-7c49-430e-ba11-1e9c79a4af73",
    "metadata": {},
    "outputs": [],
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "1f1b8dc4-9c05-40f1-bf8b-061ce2ca9612",
    "metadata": {},
    "outputs": [],
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "4d36ae3a-7041-4af2-98bf-61555b7d03ad",
    "metadata": {},
    "outputs": [
@@ -57,7 +56,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nenhum arquivo existente de dataset final\n",
       "Leitura finalizada da entrada 1\n",
       "Leitura finalizada da entrada 2\n",
       "Leitura finalizada da entrada 3\n",
@@ -120,7 +118,7 @@
     "    \n",
     "     \n",
     "    # Aplicar filtros desejados para o dataset\n",
-    "    df = df[((df[\"Produto\"] == \"ETANOL\") | (df[\"Produto\"] == \"GASOLINA\") ) & (df[\"Estado - Sigla\"] == estado)]\n",
+    "    df = df[((df[\"Produto\"] == \"ETANOL\") | (df[\"Produto\"] == \"GASOLINA\") | (df[\"Produto\"] == \"GNV\")) & (df[\"Municipio\"] == \"GUARULHOS\")]\n",
     "\n",
     "    \n",
     "    # Acrescenta coluna com o identificador do semestre\n",
