Eu quero desistir

--- a/Atividade KMeans.ipynb
+++ b/Atividade KMeans.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "07f6a4be-083b-4f7d-a484-60783c17aee7",
+   "metadata": {},
+   "source": [
+    "# Atividade KMeans\n",
+    "\n",
+    "Rhenan Dias Morais - GU3009254"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 110,
    "id": "1c846829-8f12-4e03-ba1d-e97a38a3eb7b",
