--- a/Atividade 1.ipynb
+++ b/Atividade 1.ipynb
@@ -37,6 +37,7 @@
     "import random\n",
     "\n",
     "# Configura um seed aleatório para o gerador de números aleatórios\n",
+    "# O mesmo permite que o teste seja repetido\n",
     "random.seed(random.random())\n",
     "\n",
     "# Tamanho da amostra de dados\n",
@@ -135,6 +136,7 @@
     "# Calcula probabilidade entre \"A\" e \"B\"\n",
     "a = 1\n",
     "b = 2\n",
+    "# Funções densidade probabilidade\n",
     "prob = expon.pdf(a) - expon.pdf(b)\n",
     "print(f'A probabilidade entre {a:.1f} e {b:.1f} é de {prob:.3f}')\n",
     "\n",
@@ -155,7 +157,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -169,11 +171,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "52634da84371cba311ea128a5ea7cdc41ff074b781779e754b270ff9f8153cee"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
