--- a/Atividade 3.ipynb
+++ b/Atividade 3.ipynb
@@ -56,6 +56,7 @@
     }
    ],
    "source": [
+    "# Gerar 10 números zeros\n",
     "np.zeros(10)"
    ]
   },
@@ -83,6 +84,7 @@
     }
    ],
    "source": [
+    "# Gerar 10 números uns\n",
     "np.ones(10)"
    ]
   },
@@ -602,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
