--- a/Atividade 5 Regressão Linear.ipynb
+++ b/Atividade 5 Regressão Linear.ipynb
@@ -387,6 +387,8 @@
     "from yellowbrick.model_selection import (LearningCurve,)\n",
     "import janitor as jn\n",
     "\n",
+    "# processo de pré processamento\n",
+    "\n",
     "X, y = jn.get_features_targets(iris, target_columns='petal_width')\n",
     "X_treino, X_test, Y_treino, Y_test = model_selection.train_test_split(X, y,\n",
     "test_size=0.3, random_state=42)\n",
@@ -570,7 +572,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -584,7 +586,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
